--- a/.github/workflows/manual-python-test.yml
+++ b/.github/workflows/manual-python-test.yml
@@ -14,12 +14,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'   # or any version you want
+        python-version: '3.12'   # or any version you want
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
 
     - name: Run tests
       run: |
