Workflow - Commit to master

--- a/.github/workflows/merge-master-wf.yml
+++ b/.github/workflows/merge-master-wf.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Run unittest tests
         run: |
-          python -m unittest discover -s test -p "*.py"
+          python -m unittest discover -s test -p "*.py" --verbose
