--- a/.github/workflows/merge-master-wf.yml
+++ b/.github/workflows/merge-master-wf.yml
@@ -21,3 +21,17 @@ jobs:
       - name: Run unittest tests
         run: |
           python -m unittest discover -s test -p "*.py" --verbose
+
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install build wheel setuptools
+          
+      - name: Build wheel
+        run: python -m build
+
+      - name: Upload built artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
