--- a/.github/workflows/merge-master-wf.yml
+++ b/.github/workflows/merge-master-wf.yml
@@ -50,3 +50,10 @@ jobs:
         with:
           name: dist
           path: dist/
+
+      - name: Upload to TestPyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        run: |
+          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
