--- a/.github/workflows/merge-master-wf.yml
+++ b/.github/workflows/merge-master-wf.yml
@@ -1,4 +1,4 @@
-name: Python Test and Build on Master Merge
+name: Python Test, Build and Deploy on Master Merge
 
 on:
   push:
@@ -57,3 +57,37 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
         run: |
           python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
+
+  deploy:
+      needs: build
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+
+        - name: Set up Python
+          uses: actions/setup-python@v4
+          with:
+            python-version: '3.12'
+
+        - name: Uninstall current package version (if any)
+          run: |
+            pip uninstall -y ci-cd-test-omolchanov || echo "Package not installed, skipping uninstall"
+
+        - name: Install package from TestPyPI
+          run: |
+            python -m pip install --upgrade pip
+            pip install -i https://test.pypi.org/simple/ ci-cd-test-omolchanov
+
+        - name: Trigger PythonAnywhere webapp reload
+          env:
+            PA_API_TOKEN: ${{ secrets.PYTHONANYWHERE_API_TOKEN }}
+            PA_USERNAME: omolchanov
+          run: |
+            curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/mywebapp/reload/" \
+              -H "Authorization: Token $PA_API_TOKEN"
+
+        - name: Run Application
+          run: |
+            my_app_test
