--- a/.github/workflows/merge-master-wf.yml
+++ b/.github/workflows/merge-master-wf.yml
@@ -24,39 +24,39 @@ jobs:
       - name: Run unittest tests
         run: python -m unittest discover -s test -p "*.py" --verbose
 
-  build:
-    needs: test  # ✅ Wait until tests pass
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-
-      - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install build wheel setuptools twine
-
-      - name: Build wheel
-        run: python -m build
-
-      - name: Upload built artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/
-
-      - name: Upload to TestPyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        run: |
-          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
+#  build:
+#    needs: test  # ✅ Wait until tests pass
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      - name: Set up Python
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: '3.12'
+#
+#      - name: Install build tools
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install build wheel setuptools twine
+#
+#      - name: Build wheel
+#        run: python -m build
+#
+#      - name: Upload built artifacts
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: dist
+#          path: dist/
+#
+#      - name: Upload to TestPyPI
+#        env:
+#          TWINE_USERNAME: __token__
+#          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+#        run: |
+#          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
 
   deploy:
       needs: build
