--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -1,4 +1,4 @@
-name: Python Test, Build and Deploy on Master Merge
+name: Python Test, Build and Deploy on Master Merge (whl package)
 
 on:
   push:
@@ -24,42 +24,42 @@ jobs:
       - name: Run unittest tests
         run: python -m unittest discover -s test -p "*.py" --verbose
 
-#  build:
-#    needs: test  # ✅ Wait until tests pass
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up Python
-#        uses: actions/setup-python@v4
-#        with:
-#          python-version: '3.12'
-#
-#      - name: Install build tools
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install build wheel setuptools twine
-#
-#      - name: Build wheel
-#        run: python -m build
-#
-#      - name: Upload built artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: dist
-#          path: dist/
-#
-#      - name: Upload to TestPyPI
-#        env:
-#          TWINE_USERNAME: __token__
-#          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-#        run: |
-#          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
+  build:
+    needs: test  # ✅ Wait until tests pass
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install build wheel setuptools twine
+
+      - name: Build wheel
+        run: python -m build
+
+      - name: Upload built artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
+      - name: Upload to TestPyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        run: |
+          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
 
   deploy:
-#      needs: build
+      needs: build
       runs-on: ubuntu-latest
 
       steps:
