Workflow - deploy to pypl

--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -6,93 +6,59 @@ on:
       - master
 
 jobs:
-#  test:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up Python
-#        uses: actions/setup-python@v4
-#        with:
-#          python-version: '3.12'
-#
-#      - name: Install test dependencies
-#        run: pip install -r requirements.txt || true  # optional if you use requirements.txt
-#
-#      - name: Run unittest tests
-#        run: python -m unittest discover -s test -p "*.py" --verbose
-#
-#  build:
-#    needs: test  # ✅ Wait until tests pass
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#
-#      - name: Set up Python
-#        uses: actions/setup-python@v4
-#        with:
-#          python-version: '3.12'
-#
-#      - name: Install build tools
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install build wheel setuptools twine
-#
-#      - name: Build wheel
-#        run: python -m build
-#
-#      - name: Upload built artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: dist
-#          path: dist/
-#
-#      - name: Upload to TestPyPI
-#        env:
-#          TWINE_USERNAME: __token__
-#          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-#        run: |
-#          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install test dependencies
+        run: pip install -r requirements.txt || true  # optional if you use requirements.txt
+
+      - name: Run unittest tests
+        run: python -m unittest discover -s test -p "*.py" --verbose
+  build:
+    needs: test  # Wait until tests pass
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install build wheel setuptools twine
+
+      - name: Build wheel
+        run: python -m build
+
+      - name: Upload built artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
 
   deploy:
+    needs: [test, build]
     runs-on: ubuntu-latest
     steps:
-      - name: Uninstall, reinstall package, run CLI, and reload webapp on PythonAnywhere
+      - name: Upload to TestPyPI
         env:
-          PA_API_TOKEN: ${{ secrets.PYTHONANYWHERE_API_TOKEN }}
-          PA_USERNAME: omolchanov
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
         run: |
-          RESPONSE=$(curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/" \
-            -H "Authorization: Token $PA_API_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d '{"command": "/bin/bash"}')
-          
-          CONSOLE_ID=$(echo "$RESPONSE" | jq -r '.id')
-          echo "Console ID: $CONSOLE_ID"
-          
-          send_command() {
-            local CMD=$1
-            curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/consoles/$CONSOLE_ID/send_input/" \
-              -H "Authorization: Token $PA_API_TOKEN" \
-              -H "Content-Type: application/json" \
-              -d "{\"input\": \"$CMD\"}"
-          }
-          
-          send_command "pip uninstall -y ci-cd-test-omolchanov || true\n"
-          sleep 5
-          
-          send_command "pip install -i https://test.pypi.org/simple/ --upgrade ci-cd-test-omolchanov\n"
-          sleep 10
-          
-          # Run your CLI command
-          send_command "my_app_test\n"
-          sleep 5
-          
-          send_command "exit\n"
-          
-          curl -X POST "https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/mywebapp/reload/" \
-            -H "Authorization: Token $PA_API_TOKEN"
+          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
+      
