--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Run unittest tests
         run: python -m unittest discover -s test -p "*.py" --verbose
+
   build:
     needs: test  # Wait until tests pass
     runs-on: ubuntu-latest
@@ -55,6 +56,11 @@ jobs:
     needs: [test, build]
     runs-on: ubuntu-latest
     steps:
+      - name: Install build tools
+        run: |
+         python -m pip install --upgrade pip
+         pip install build wheel setuptools twine
+
       - name: Upload to TestPyPI
         env:
           TWINE_USERNAME: __token__
