--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - master
-    tags:
-      - '*'
 
 jobs:
   test:
@@ -47,12 +45,14 @@ jobs:
       - name: Build wheel
         run: python -m build
 
-      - name: Upload wheel to GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: dist/*.whl
+      - name: Upload wheel to Gemfury
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GEMFURY_API_TOKEN: ${{ secrets.GEMFURY_API_TOKEN }}
+        run: |
+            curl -H "Authorization: Bearer $GEMFURY_API_TOKEN" \
+              -F package=@dist/*.whl \
+              https://push.fury.io/omolchanov/
+
 
 
 #  deploy:
