--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -56,19 +56,23 @@ jobs:
 
 
 
-#  deploy:
-#    needs: [test, build]
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Install build tools
-#        run: |
-#         python -m pip install --upgrade pip
-#         pip install build wheel setuptools twine
-#
-#      - name: Upload to TestPyPI
-#        env:
-#          TWINE_USERNAME: __token__
-#          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-#        run: |
-#          python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download wheel artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: wheel-dist
+          path: dist/
+
+      - name: Install twine
+        run: python -m pip install --upgrade twine
+
+      - name: Upload to PyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          twine upload dist/* --verbose
       
