--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: wheel-dist
-          path: dist/
+          path: dist/*.whl
 
       - name: Install twine
         run: python -m pip install --upgrade twine
