--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -46,6 +46,8 @@ jobs:
         run: python -m build
 
       - name: Upload wheel to Gemfury
+        with:
+          name: wheel-dist
         env:
           GEMFURY_API_TOKEN: ${{ secrets.GEMFURY_API_TOKEN }}
         run: |
