Workflow - deploy to pypl

--- a/.github/workflows/merge-master-wf-whl.yml
+++ b/.github/workflows/merge-master-wf-whl.yml
@@ -75,4 +75,4 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        run: twine upload dist/* --verbose
+        run: twine upload --repository-url https://test.pypi.org/legacy/ dist/* --verbose
